Cannot edit Search Locations with only tracker3 installed
As long as tracker
is not installed, the "Search Locations" button in the "Search" page is disabled. This is true even if tracker3
is installed, along with apps whose search providers use it (such as Nautilus).
In other words, it appears that the "Search Locations" button only controls that setting for tracker
and not tracker3
.
Steps to reproduce:
- Uninstall
tracker
if it's installed - Install
tracker3
if it's not already installed (it should be, given that it's a dependency ofnautilus
) - Open GNOME Settings and go to the "Search" page
- See that the "Search Locations" button is disabled, even though the rest of the page is usable
- Close GNOME Settings
- Install
tracker
- Open GNOME Settings and go to the "Search" page again
- See that the "Search Locations" button is usable again
If it's the case that tracker3
and tracker
have a compatible notion of which folders they should index, it would be nice if the "Search Locations" button could control that setting for both versions of Tracker.
Versions:
- Fedora 33 Workstation Edition
- GNOME 3.38.1